Labatt POCM Deployment to UAT 09.16.2016/objects/Annual_POC_Budget_Plan__c.object
<CustomObject>
    <description>This custom object is used for POC Planning (Slalom Aug 2016)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Annual POC Budget Plans</relationshipLabel>
        <relationshipName>Annual_POC_Budget_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Territory_Budget__c</fullName>
        <label>Annual Area Budget</label>
        <referenceTo>Annual_Area_Budget__c</referenceTo>
        <relationshipLabel>Annual POC Budget Plans</relationshipLabel>
        <relationshipName>Annual_POC_Budget_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Discretionary_Pre_Planning_Spend__c</fullName>
        <label>Discretionary Pre-Planning Spend</label>
        <summarizedField>POC_Spend_Category__c.Pre_Planning_Spend__c</summarizedField>
        <summaryFilterItems>
            <field>POC_Spend_Category__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Discretionary</value>
        </summaryFilterItems>
        <summaryForeignKey>POC_Spend_Category__c.Annual_POC_Budget_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discretionary_Spend__c</fullName>
        <formula>Discretionary_Pre_Planning_Spend__c +  Discretionary_Variable_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discretionary Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discretionary_Variable_Spend__c</fullName>
        <label>Discretionary Variable Spend</label>
        <summarizedField>POC_Spend_Category__c.Variable_Spend__c</summarizedField>
        <summaryFilterItems>
            <field>POC_Spend_Category__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Discretionary</value>
        </summaryFilterItems>
        <summaryForeignKey>POC_Spend_Category__c.Annual_POC_Budget_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Driver_Spend__c</fullName>
        <label>Driver Spend</label>
        <summarizedField>POC_Spend_Category__c.Driver_Spend__c</summarizedField>
        <summaryFilterItems>
            <field>POC_Spend_Category__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Driver</value>
        </summaryFilterItems>
        <summaryForeignKey>POC_Spend_Category__c.Annual_POC_Budget_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Target_Vol_HL__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Target Vol (HL)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Activation_Discretionary_Spend__c</fullName>
        <label>Trade Activation Discretionary Spend</label>
        <summarizedField>POC_Spend_Category__c.Trade_Activation_Discretionary_Spend__c</summarizedField>
        <summaryFilterItems>
            <field>POC_Spend_Category__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Trade Activation</value>
        </summaryFilterItems>
        <summaryForeignKey>POC_Spend_Category__c.Annual_POC_Budget_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trade_Activation_Driver_Spend__c</fullName>
        <label>Trade Activation Driver Spend</label>
        <summarizedField>POC_Spend_Category__c.Trade_Activation_Driver_Spend__c</summarizedField>
        <summaryFilterItems>
            <field>POC_Spend_Category__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Trade Activation</value>
        </summaryFilterItems>
        <summaryForeignKey>POC_Spend_Category__c.Annual_POC_Budget_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trade_Activation_Spend__c</fullName>
        <formula>Trade_Activation_Discretionary_Spend__c + Trade_Activation_Driver_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade Activation Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Annual POC Budget Plan</label>
    <nameField>
        <label>Annual POC Budget Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Annual POC Budget Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>